--- a/about.html
+++ b/about.html
@@ -82,19 +82,19 @@
                     </div>
                 </div>
                 <div class="row g-4 mb-5">
-                    <div class="col-md-6 mb-4 text-center">
+                    <div class="col-md-6 col-lg-3 mb-4 text-center">
                         <h3 class="h4 text-primary mb-3">UX & Design</h3>
                         <p class="skill-set mb-0">User Research · Personas · User Journeys · Information Architecture · Figma Prototyping · Accessibility</p>
                     </div>
-                    <div class="col-md-6 mb-4 text-center">
+                    <div class="col-md-6 col-lg-3 mb-4 text-center">
                         <h3 class="h4 text-primary mb-3">Development</h3>
                         <p class="skill-set mb-0">Front-End Coding (HTML, SCSS, JavaScript, Bootstrap) · Interactive Prototypes</p>
                     </div>
-                    <div class="col-md-6 mb-4 text-center">
+                    <div class="col-md-6 col-lg-3 mb-4 text-center">
                         <h3 class="h4 text-primary mb-3">Visual Communication</h3>
                         <p class="skill-set mb-0">Branding · Visual Identity · Layout Design · Motion Design (After Effects) · Photography</p>
                     </div>
-                    <div class="col-md-6 mb-4 text-center">
+                    <div class="col-md-6 col-lg-3 mb-4 text-center">
                         <h3 class="h4 text-primary mb-3">Project Management</h3>
                         <p class="skill-set mb-0">Team Coordination · Agile / Kanban · Client Communication · Double Diamond Process · Design Thinking · Lean Startup</p>
                     </div>
