--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
                         <div class="col-12 col-lg-6">
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
-                                    <img src="img/posters-mockups.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project image 1" />
+                                    <img src="img/posters-mockups.jpg" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project image 1" />
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <img src="img/article-digi2.jpg" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project image 2" />
@@ -101,7 +101,7 @@
                                     <img src="img/culture-5.jpg" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project image 4" />
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <img src="img/portfolio-magazineart.png" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project image 3" />
+                                    <img src="img/portfolio-magazineart.jpg" class="img-fluid rounded" alt="Gestalt – Digital Magazine visual design project image 3" />
                                 </div>
                             </div>
                         </div>
@@ -117,10 +117,10 @@
                         <div class="col-12 col-lg-6">
                             <div class="row g-3">
                                 <div class="col-12 col-md-6">
-                                    <img src="img/hoedown1.png" class="img-fluid rounded" alt="Hoedown After Dark project image 1" />
+                                    <img src="img/hoedown1.jpg" class="img-fluid rounded" alt="Hoedown After Dark project image 1" />
                                 </div>
                                 <div class="col-12 col-md-6">
-                                    <img src="img/hoedown2.png" class="img-fluid rounded" alt="Hoedown After Dark project image 2" />
+                                    <img src="img/hoedown2.jpg" class="img-fluid rounded" alt="Hoedown After Dark project image 2" />
                                 </div>
                             </div>
                         </div>
